--- a/src/app.html
+++ b/src/app.html
@@ -23,9 +23,10 @@
             <span>Past Orders</span>
           </a>
         </nav>
-        <a href="#" class="top-bar-cart-link">
+        <a @click="toggleSidebar" class="top-bar-cart-link">
           <i class="icofont-cart-alt icofont-1x"></i>
-          <span>Cart (0)</span>
+          <span>Cart ({{totalAddedProduct}})</span>
+          <button class="" ></button>
         </a>
       </header>
 
@@ -36,24 +37,22 @@
       </div>
 
       <main class="wrapper">
-
         <h2>Recommended</h2>
 
         <div class="recommended">
-
-          <div class="card">
+          <div v-for="(product,index) in inventory.slice(0,3)" :key="index" class="card">
             <div class="card-title">
-              Carrots
+              {{product.name}}
             </div>
             <div class="card-body">
-              <i class="icofont-10x icofont-carrot"></i>
+              <i class="icofont-10x icofont-{{ product.icon }}"></i>
               <form>
                 <div class="row">
                   <div class="cell">
                     <label>Type:</label>
                   </div>
                   <div class="cell">
-                    <em>Vegetable</em>
+                    <em>{{product.type}}</em>
                   </div>
                 </div>
                 <div class="row">
@@ -61,7 +60,7 @@
                     <label>Price:</label>
                   </div>
                   <div class="cell">
-                    $4.82
+                    ${{product.price.USD}}
                   </div>
                 </div>
                 <div class="row">
@@ -69,91 +68,13 @@
                     <label>Quantity:</label>
                   </div>
                   <div class="cell">
-                    <input type="number" v-model.number="inventory.carrots">
+                    <input type="number" v-model.number="inventory[index].quantity">
                   </div>
                 </div>
               </form>
             </div>
             <div class="card-footer">
-              <button @click="addToCart('carrots')" class="btn btn-light">
-                Add to cart
-              </button>
-            </div>
-          </div>
-
-          <div class="card">
-            <div class="card-title">
-              Pineapples
-            </div>
-            <div class="card-body">
-              <i class="icofont-10x icofont-pineapple"></i>
-              <form>
-                <div class="row">
-                  <div class="cell">
-                    <label>Type:</label>
-                  </div>
-                  <div class="cell">
-                    <em>Fruit</em>
-                  </div>
-                </div>
-                <div class="row">
-                  <div class="cell">
-                    <label>Price:</label>
-                  </div>
-                  <div class="cell">
-                    $1.62
-                  </div>
-                </div>
-                <div class="row">
-                  <div class="cell">
-                    <label>Quantity:</label>
-                  </div>
-                  <div class="cell">
-                    <input type="number" v-model="inventory.pineapples">
-                  </div>
-                </div>
-              </form>
-            </div>
-            <div class="card-footer">
-              <button class="btn btn-light">Add to cart</button>
-            </div>
-          </div>
-
-          <div class="card">
-            <div class="card-title">
-              Cherries
-            </div>
-            <div class="card-body">
-              <i class="icofont-10x icofont-cherry"></i>
-              <form>
-                <div class="row">
-                  <div class="cell">
-                    <label>Type:</label>
-                  </div>
-                  <div class="cell">
-                    <em>Fruit</em>
-                  </div>
-                </div>
-                <div class="row">
-                  <div class="cell">
-                    <label>Price:</label>
-                  </div>
-                  <div class="cell">
-                    $1.04
-                  </div>
-                </div>
-                <div class="row">
-                  <div class="cell">
-                    <label>Quantity:</label>
-                  </div>
-                  <div class="cell">
-                    <input type="number" v-model="inventory.cherries">
-                  </div>
-                </div>
-              </form>
-            </div>
-            <div class="card-footer">
-              <button class="btn btn-light">Add to cart</button>
+              <button @click="addToCart(index)" class="btn btn-light">Add to cart</button>
             </div>
           </div>
 
@@ -161,6 +82,10 @@
 
       </main>
 
+      <sidebar v-if="showSidebar" 
+                :toggle="toggleSidebar"
+                :cart="cart"
+                :inventory="inventory"/>
       <footer>
       </footer>
 
@@ -171,26 +96,105 @@
       let app = Vue.createApp({
         data() {
           return {
-            inventory: {
-              carrots: 0,
-              pineapples: 0,
-              cherries: 0
-            },
-            cart: {
-              carrots: 0,
-              pineapples: 0,
-              cherries: 0
-            }
+            showSidebar:false,
+            inventory:[],
+            cart: {},
+            totalAddedProduct:0,
           }
         },
         methods: {
-          addToCart(type) {
-            this.cart[type] += this.inventory[type]
-            console.log(this.cart)
-          }
-        }
-      })
+          addToCart(index) {
+            const addedItem =this.inventory[index]
+            this.totalAddedProduct +=addedItem.quantity
 
+            // console.log(!this.card[addedItem.name])
+            // this.cart[addedItem.name] = {...addedItem}            
+            if (this.cart[addedItem.name]){
+              console.log("exist",this.cart[addedItem.name])
+              this.cart[addedItem.name].quantity = this.cart[addedItem.name].quantity + addedItem.quantity;
+            }
+            else{
+              this.cart[addedItem.name] = { "quantity" :addedItem.quantity   }          
+               console.log("item",addedItem.quantity )
+
+            }
+            this.cart[addedItem.name].price= addedItem.price
+            this.cart[addedItem.name].name=addedItem.name
+            this.cart[addedItem.name].totalPrice= {"USD":this.cart[addedItem.name].quantity * addedItem.price.USD.toFixed(2),
+                                                  "NOK": this.cart[addedItem.name].quantity * addedItem.price.NOK.toFixed(2)}
+            // console.log("added item to cart",this.cart)
+          },
+          // cululateTotal(name){
+          //   const product = this.inventory.find(p)=>{
+          //     if (p.name==name){
+          //       return
+          //     }
+          //   }
+          //   return product.price.USD;
+          // },
+          toggleSidebar(){
+            this.showSidebar=!this.showSidebar;
+          }
+        },
+        async mounted(){
+          const request = await fetch("./food.json")
+          const data = await request.json();
+          this.inventory=data;
+
+          console.log("request",data)
+        } 
+      })
+      app.component('sidebar',{
+        props:['toggle','cart'],
+        template:`
+        <aside class="cart-container">
+        <div class="cart">
+          <h1 class="cart-title spread">
+            <span>
+              Cart
+              <i class="icofont-cart-alt icofont-1x"></i>
+            </span>
+            <button class="cart-close" @click="toggle">&times;</button>
+          </h1>
+
+          <div class="cart-body">
+            <table class="cart-table">
+              <thead>
+                <tr>
+                  <th><span class="sr-only">Product Image</span></th>
+                  <th>Product</th>
+                  <th>Price</th>
+                  <th>Qty</th>
+                  <th>Total</th>
+                  <th><span class="sr-only">Actions</span></th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr v-for="(item,index) in cart">
+                  <td><i class="icofont-carrot icofont-3x"></i></td>
+                  <td>{{item.name}}</td>
+                  <td>\${{item.price.USD}}</td>
+                  <td class="center">{{item.quantity}}</td>
+                  <td>\${{item.totalPrice.USD}}</td>
+                  <td class="center">
+                    <button class="btn btn-light cart-remove">
+                      &times;
+                    </button>
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+
+            <p class="center"><em>No items in cart</em></p>
+            <div class="spread">
+              <span><strong>Total:</strong> $1.00</span>
+              <button class="btn btn-light">Checkout</button>
+            </div>
+          </div>
+        </div>
+      </aside>
+        `
+      });
       app.mount('#app')
     </script>
   </body>
